[package]
name = "TerraIntrimmer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
json5format = "0.2.6"
jsondata = { git = "https://github.com/Freaky/jsondata.git", branch = "fix-float-infinity" }
libflate = "1.2.0"
native-dialog = { version = "0.6.3", features = ["windows_dpi_awareness"] }
