[package]
name = "TerraIntrimmer"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
libflate = "1.2.0"
native-dialog = { version = "0.6.3", features = ["windows_dpi_awareness"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["preserve_order", "float_roundtrip"] }
